# rusty_zipline

./: .gitignore  Cargo.toml  PROJECT_SUMMARY.md  README.md
benches/: benchmarks.rs
docs/: ARCHITECTURE.md  GETTING_STARTED.md  config-example.toml
examples/: benchmark_usage.rs  buy_and_hold.rs  data_sources_example.rs  dual_moving_average.rs
src/: algorithm.rs  asset.rs  calendar.rs  currency.rs  data.rs  engine.rs  error.rs  execution.rs  finance.rs  lib.rs  order.rs  performance.rs  pipeline.rs  schedule.rs  types.rs
src/assets/: asset_db.rs  asset_finder.rs  mod.rs
src/data/: adjustments.rs  bar_reader.rs  benchmarks.rs  bundle.rs  continuous_futures.rs  data_portal.rs  dispatch_reader.rs  frequency.rs  history_loader.rs  minute_bars.rs  resample.rs
src/data/fx/: base.rs  exploding.rs  hdf5.rs  in_memory.rs  mod.rs  utils.rs
src/data/readers/: bcolz_daily.rs  bcolz_minute.rs  bcolz_utils.rs  mod.rs
src/data/sources/: alpha_vantage.rs  mod.rs  quandl.rs  yahoo.rs
src/finance/: account.rs  asset_restrictions.rs  blotter.rs  cancel_policy.rs  commission.rs  constants.rs  controls.rs  ledger.rs  metrics.rs  mod.rs  portfolio.rs  slippage.rs  trading.rs  transaction.rs
src/pipeline/: classifiers.rs  composite.rs  domain.rs  engine.rs  factors.rs  factors_fundamental.rs  factors_returns.rs  factors_statistical.rs  factors_technical.rs  factors_volume.rs  filters.rs  graph.rs  mod.rs  term.rs
tests/: data_sources_integration_test.rs  error_tests.rs  fx_integration_test.rs  integration_algorithm_api.rs  integration_test.rs  pipeline_critical_factors_test.rs
tests/p2_tests/: mod.rs  test_benchmarks.rs  test_cli.rs  test_continuous_futures.rs  test_data_sources.rs  test_fx.rs  test_resample.rs
tests/p2_tests/fixtures/: futures_chain.json  sample_fx_rates.csv  sample_prices.csv
