[package]
name = "rusty_zipline"
version = "0.1.0"
edition = "2021"
authors = ["Robert Fall"]
description = "A Rust implementation of Zipline - Pythonic event-driven backtesting library"
license = "Apache-2.0"
repository = "https://github.com/fall-development-rob/rusty_zipline"
keywords = ["trading", "backtesting", "finance", "algorithmic-trading"]
categories = ["finance", "simulation"]

[dependencies]
# Data handling
polars = { version = "0.38", features = ["lazy", "temporal", "dtype-datetime", "csv", "parquet"] }

# Date and time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Database (for asset management) - NOTE: Only one SQLite backend can be active at once
# Use rusqlite by default (simpler, no async needed)
rusqlite = { version = "0.31", features = ["bundled", "chrono", "uuid"], optional = true }
# Alternative: sqlx for async database access (conflicts with rusqlite)
# Temporarily disabled due to conflict - choose one backend
# sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "chrono", "uuid"], optional = true }

# Async runtime (for data sources)
tokio = { version = "1.36", features = ["full"], optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }

# Numerical computations
num-traits = "0.2"
statrs = "0.16"  # Statistical functions for metrics

# Logging
log = "0.4"
env_logger = "0.11"

# UUID for order IDs
uuid = { version = "1.7", features = ["v4", "serde"] }

# HashMap optimization
hashbrown = "0.14"

# Concurrency
rayon = "1.8"  # Parallel iterators

# Bcolz reading (optional Python bindings for blosc decompression)
pyo3 = { version = "0.20", features = ["auto-initialize"], optional = true }

# CLI (for bundle management)
clap = { version = "4.5", features = ["derive", "color"], optional = true }
indicatif = { version = "0.17", optional = true }
colored = { version = "2.1", optional = true }
toml = { version = "0.8", optional = true }
dirs = { version = "5.0", optional = true }

[dev-dependencies]
proptest = "1.4"
criterion = "0.5"
approx = "0.5"
tempfile = "3.10"

[features]
default = ["rusqlite-support"]
rusqlite-support = ["rusqlite"]
async = ["tokio", "reqwest"]
# sqlx-support = ["sqlx", "tokio"]  # Disabled due to conflict with rusqlite
cli = ["clap", "indicatif", "colored", "toml", "dirs"]
python-blosc = ["pyo3"]  # Enable Python blosc for bcolz decompression
# Note: Cannot enable both rusqlite-support and sqlx-support simultaneously
full = ["async", "cli", "rusqlite-support"]

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
